# agents-swarms

./: .gitignore  .gitmodules  README.md  pyproject.toml
analysis/: analyze_swarm.py
analysis/experiment_exp_20260405_022850/: report.md
analysis/model_comparison_20260406/: 00_START_HERE.txt  ANALYSIS.txt  COMPLETE_ANALYSIS_SUMMARY.md  CONCLUSIONS.md  FILES_GUIDE.txt  INDEX.md  LOSS_ANALYSIS.txt  LOSS_INSIGHTS.md  LOSS_VISUAL_SUMMARY.txt  QUICK_FACTS.txt  README.md  analysis.py  loss_analysis.py  loss_stats.json  raw_data.json  summary_table.csv  timeline.txt
analysis/swarms_vs_parallelisation/: compare_approaches.py  summary.md
configs/: experiment.yaml  experiment_opus.yaml  experiment_sonnet.yaml  sanity_w_read.yaml
docs/: sanity_escalation_plan.md  single_turn_mode_resolution.md
scripts/: execute_sanity_level1.py  run_sanity_w_read.py  sanity_dry_run.py
src/agent_swarms/: __init__.py  budgeting.py  config.py  coordinator.py  coordinator_local.py  launcher.py  orchestrator.py  reasoning_trace.py  shared_memory.py  snapshotting.py  swarm_agent_runner.py  swarm_config.py  swarm_orchestrator.py
src/agent_swarms/agents/: base.py  claude_agent_runner.py  isolated_agent_process.py
src/agent_swarms/compatibility/: original_repo_adapter.py  training_harness.py
src/agent_swarms/experiment_modes/: swarm_two_agents.py
src/agent_swarms/outputs/: collector.py  evaluator.py  reporter.py  (+1 more)
templates/: agent_first_message.md  agent_system_prompt.md  agent_system_prompt_architect.md  agent_system_prompt_optimizer.md  collab.md
tests/sanity/: test_stats.py
(+9 files in other folders)
