[project]
name = "agent-swarms"
version = "0.1.0"
description = "Swarm agent experiment framework: agents communicate via shared blackboard"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40.0",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "pyyaml>=6.0",
    "tabulate>=0.10.0",
]

[project.scripts]
run-swarm = "agent_swarms.launcher:main_swarm"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_swarms"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
